# CloudAuditor

./: .env.example  .gitignore  CIS_COMPUTE_BENCHMARK.md  CIS_DATABASE_BENCHMARK.md  CIS_ENDUSER_BENCHMARK.md  CIS_FOUNDATIONS_BENCHMARK.md  CIS_STORAGE_BENCHMARK.md  COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  WINDOWS_SETUP_COMPLETE.md  aws  aws.html  aws_Scan.md  aws_after.html  aws_consistent.html  aws_pw_policy.md  database_test.json  final_test_report.md  pyproject.toml  requirements.txt  run_cloudauditor.bat  setup.py  test_azure_compute_output.md  test_azure_output.md  test_consistent_output.md  test_do_foundations.md  test_do_services.html  test_do_services.md  test_enhanced_output.md  test_gcp_consistent_output.md  test_gcp_enhanced_output.md  test_gcp_final_fixed_output.md  test_gcp_final_output.md  test_gcp_fixed_output.md  test_gcp_html_output.html  test_results.json  (+1 more)
.claude/: settings.local.json
cloudauditor/: __init__.py  main.py
cloudauditor/commands/: __init__.py  config.py  explain.py  report.py  scan.py
cloudauditor/data/: mock_results.json
cloudauditor/providers/: __init__.py  aws.py  azure_scanner.py  digitalocean_scanner.py  gcp_scanner.py
cloudauditor/providers/aws_checks/: __init__.py  base_checker.py  ec2_ami_checks.py  ec2_ebs_checks.py  ec2_general_checks.py  ecs_checks.py  lambda_checks.py
cloudauditor/providers/aws_databases/: __init__.py  aurora_checks.py  base_checker.py  documentdb_checks.py  dynamodb_checks.py  elasticache_checks.py  neptune_checks.py  rds_checks.py
cloudauditor/providers/aws_enduser/: __init__.py  appstream_checks.py  base_checker.py  workdocs_checks.py  workspaces_checks.py  workspaces_web_checks.py
cloudauditor/providers/aws_foundations/: __init__.py  iam_checks.py  logging_checks.py  monitoring_checks.py  networking_checks.py  storage_checks.py
cloudauditor/providers/aws_storage/: __init__.py  backup_checks.py  base_checker.py  ebs_checks.py  edr_checks.py  efs_checks.py  fsx_checks.py  s3_checks.py
cloudauditor/providers/azure/: analytics_checks.py  base_checker.py  compute_checks.py  database_checks.py  identity_checks.py  logging_checks.py  networking_checks.py  security_checks.py  storage_checks.py
cloudauditor/providers/digitalocean/: base_checker.py  checks_api.py  (+8 more)
cloudauditor/utils/: __init__.py  fileio.py  formatter.py  logger.py
docs/: GCP_SETUP_SUMMARY.md  SETUP.md
examples/: example_usage.py
scripts/: setup_linux.sh  setup_windows.bat  setup_windows.ps1
tests/: __init__.py  test_config.py  test_report.py  test_scan.py
(+10 files in other folders)
